--- a/libs/css/filebrowser.css
+++ b/libs/css/filebrowser.css
@@ -121,12 +121,12 @@
                     background-color: #ddd;
                 }
 
-    .fb-container .fb-tree,
+    .fb-container .fb-left,
     .fb-container .fb-main {
         top: 0px;
     }
 
-    .fb-container .fb-topbar ~ .fb-tree,
+    .fb-container .fb-topbar ~ .fb-left,
     .fb-container .fb-topbar ~ .fb-main {
         top: 60px;
     }
@@ -143,7 +143,7 @@
             right: 0;
         }
 
-    .fb-container .fb-tree {
+    .fb-container .fb-left {
         position: absolute;
         left: 0;
         width: 250px;
@@ -155,23 +155,23 @@
         padding-top: 25px;
     }
 
-        .fb-container .fb-tree .fb-tree-control {
-            margin-bottom: 25px;
+        .fb-container .fb-left .fb-tree-control {
             text-align: center;
         }
 
-        .fb-container .fb-tree button.fb-btn-new {
+        .fb-container .fb-left button.fb-btn-new {
             width: 60%;
             background: #554d7c;
             color: #fff;
+            margin-bottom: 25px;
         }
 
-        .fb-container .fb-tree .fb-tree-control button.fb-btn-new:hover {
+        .fb-container .fb-left .fb-tree-control button.fb-btn-new:hover {
             box-shadow: inset -4px -4px 8px rgba(0, 0, 0, 0.2);
             border-color: rgba(0, 0, 0, 0.2);
         }
 
-        .fb-container .fb-tree .fb-tree-control button.fb-btn-new:active {
+        .fb-container .fb-left .fb-tree-control button.fb-btn-new:active {
             box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         }
 
