Tweaked the console module loader
* Added a load method to be used for adding menu items
* The init method is now used to initialise only the module being accessed.  All other modules are not initialised so this should slightly increase load performance.

--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -93,6 +93,12 @@
                 </div>
                 <ul class="navbar navbar-right navbar-buttons">
                     <li>
+                        <a href="<?=$this->application->url();?>" target="_blank">
+                            <i class="fa fa-undo"></i>
+                            Back to App
+                        </a>
+                    </li>
+                    <li>
                         <a href="<?=$this->url('settings');?>">
                             <i class="fa fa-cogs"></i>
                             Settings
