--- a/libs/console/index.phtml
+++ b/libs/console/index.phtml
@@ -3,7 +3,7 @@
     <div class="col col-6">
         <div class="panel primary">
             <div class="panel-header">Maintenance</div>
-            <div class="panel-content" style="height: 250px;">
+            <div class="panel-content">
                 Parturient massa ac torquent nibh ac a tincidunt rutrum himenaeos ullamcorper quis vestibulum torquent a consectetur elit eu ut iaculis vehicula augue class pulvinar porta at quis. Metus ornare per proin cras scelerisque lacus scelerisque ac himenaeos posuere libero scelerisque non habitant amet. Elementum magna orci nostra ultrices dui gravida a eros a fringilla ad tempor orci ultrices consectetur nec tempus dui et litora dis ut consectetur dapibus leo.
             </div>
             <div class="panel-footer">
@@ -14,7 +14,7 @@
     <div class="col col-6">
         <div class="panel info">
             <div class="panel-header">Statistics</div>
-            <div class="panel-content" style="height: 200px;">
+            <div class="panel-content">
                 Parturient massa ac torquent nibh ac a tincidunt rutrum himenaeos ullamcorper quis vestibulum torquent a consectetur elit eu ut iaculis vehicula augue class pulvinar porta at quis. Metus ornare per proin cras scelerisque lacus scelerisque ac himenaeos posuere libero scelerisque non habitant amet. Elementum magna orci nostra ultrices dui gravida a eros a fringilla ad tempor orci ultrices consectetur nec tempus dui et litora dis ut consectetur dapibus leo.
             </div>
             <div class="panel-footer row">
