--- a/libs/console/application/encrypt.phtml
+++ b/libs/console/application/encrypt.phtml
@@ -4,7 +4,7 @@
         <div class="panel">
             <div class="panel-header">Configuration Files</div>
             <div class="panel-content">
-                <table class="table" id="configFiles">
+                <table class="table" id="encryptFiles">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -14,7 +14,6 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-
             </div>
         </div>
     </div>
