--- a/libs/console/css/login.css
+++ b/libs/console/css/login.css
@@ -1,8 +1,6 @@
-﻿body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background: #eee url(../images/hazaar-bg.jpg) no-repeat;
-    background-size: cover;
+﻿body, html {
+    padding: 0;
+    margin: 0;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -10,12 +8,19 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
-.overlay {
+.login-bg {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    background: #eee url(../images/hazaar-bg.jpg) no-repeat;
+    background-size: cover;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
     background-color: rgba(0,0,0,0.7);
     z-index: -1;
 }
@@ -29,6 +34,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-hazaar {
+    cursor: pointer;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid rgba(255,255,255,0.1);
     color: #fff;
     background-color: #554D7C;
     border-color: #3E3653;
@@ -108,4 +117,14 @@ h1, h2, h3, h4, h5, h6 {
 
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
+.alert {
+    background: #be3030;
+    color: #fff;
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 15px;
+    text-align: center;
+    border: 1px solid rgba(255,255,255,0.1);
 }
