--- a/libs/console/application/config.phtml
+++ b/libs/console/application/config.phtml
@@ -6,14 +6,12 @@
                 <div class="panel-header">
                     Application Configuration
                     <?php
-                    $envs = $this->config->getEnvironments();
-
-                    echo $this->html->select('env', array_combine($envs, $envs), $this->config->getEnv())
+                    echo $this->html->select('env', array_combine($this->envs, $this->envs), $this->env)
                         ->id('selectEnv');
                     ?>
                 </div>
                 <div class="panel-content">
-                    <textarea name="config" style="width: 100%; height: 100%;"><?=json_encode($this->config->getEnvConfig(), JSON_PRETTY_PRINT);?></textarea>
+                    <textarea name="config" style="width: 100%; height: 100%;"><?=$this->config;?></textarea>
                 </div>
                 <div class="panel-footer">
                     <button class="primary">Save</button>
