--- a/libs/css/popup.css
+++ b/libs/css/popup.css
@@ -1,91 +1,123 @@
-﻿.popup-overlay.hazaar.modal {
+﻿.popup-overlay {
     position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.3);
-    overflow: hidden;
-    z-index: 9998;
+    z-index: 100;
 }
 
-.modal-content.hazaar {
+    .popup-overlay.modal {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+        background-color: rgba(0,0,0,0.3);
+        z-index: 99;
+    }
+
+.popup-window {
     display: none;
-    position: absolute;
+    position: fixed;
+    background: #fff;
+    color: #333;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     max-height: 90%;
     max-width: 80%;
-    z-index: 9999;
+    border: 1px solid #ddd;
 }
 
-.popup-window.hazaar.static .popup-container.hazaar {
-    position: absolute;
-    margin-top: 0;
-    top: 51px;
-    right: 0;
-    left: 0;
-    bottom: 65px;
-}
-
-    .popup-window.hazaar.static .popup-container.hazaar:last-child {
-        bottom: 0;
-    }
-
-.modal-body.hazaar {
-    position: relative;
-    min-height: 85px;
-}
-
-    .modal-body.hazaar .modal-content-icon.hazaar {
-        font-size: 4em;
+    .popup-window .popup-window-title {
         position: absolute;
         top: 0;
-        left: 15px;
+        left: 0;
+        right: 0;
+        line-height: 50px;
+        padding-left: 15px;
+        background: #eee;
+        border-bottom: 1px solid #ddd;
+        font-size: 18px;
+        font-weight: lighter;
     }
 
-        .modal-body.hazaar .modal-content-icon.hazaar + div {
-            margin-left: 65px;
+    .popup-window .popup-window-close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 50px;
+        cursor: pointer;
+        text-align: center;
+    }
+
+        .popup-window .popup-window-close:hover {
+            background-color: #ddd;
         }
 
-.popup-window.hazaar .popup-window-icon.hazaar .fa {
-    display: block;
-}
+    .popup-window .popup-container {
+        display: block;
+        position: relative;
+        margin-top: 51px;
+        float: left;
+        width: 100%;
+        min-width: 300px;
+        overflow-y: auto;
+    }
+
+    .popup-window.static .popup-container {
+        position: absolute;
+        margin-top: 0;
+        top: 51px;
+        right: 0;
+        left: 0;
+        bottom: 65px;
+    }
+
+        .popup-window.static .popup-container:last-child {
+            bottom: 0;
+        }
+
+    .popup-window .popup-window-icon {
+        font-size: 4em;
+        float: left;
+        padding: 15px;
+    }
+
+        .popup-window .popup-window-icon .fa {
+            display: block;
+        }
 
 
-.popup-window.hazaar .popup-container.hazaar .popup-content.hazaar {
-    display: block;
-    text-align: center;
-    padding: 15px;
-}
+    .popup-window .popup-container .popup-content {
+        display: block;
+    }
 
-.popup-window.hazaar .popup-window-icon.hazaar + .popup-content.hazaar {
-    margin-left: 75px;
-}
+    .popup-window .popup-container.soft .popup-content {
+        text-align: center;
+        padding: 15px;
+    }
 
-.popup-window.hazaar .popup-buttons.hazaar {
-    margin: 15px 0;
-    text-align: center;
-}
+    .popup-window .popup-window-icon + .popup-content {
+        margin-left: 75px;
+    }
 
-.popup-window.hazaar.static .popup-buttons.hazaar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
+    .popup-window .popup-buttons {
+        margin: 15px 0;
+        text-align: center;
+    }
 
-.popup-window.hazaar .popup-buttons.hazaar button {
-    margin: 0 5px;
-    min-width: 100px;
-}
+    .popup-window.static .popup-buttons {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 
-    .popup-window.hazaar .popup-buttons.hazaar button.popup-button {
+    .popup-window .popup-buttons button {
         padding: 10px 15px;
-        border: 1px solid #ddd;
-        background: #eee;
+        margin: 0 5px;
+        min-width: 100px;
         cursor: pointer;
     }
 
-        .popup-window.hazaar .popup-buttons.hazaar button.popup-button:hover {
+        .popup-window .popup-buttons button:hover {
             border-color: #ccc;
             background-color: #ddd;
         }
