--- a/libs/console/index.phtml
+++ b/libs/console/index.phtml
@@ -1,59 +1,3 @@
-<?php
-
-function show_graph($view, $name){
-
-    if(!($graph = ake($view->graphs, $name)))
-        return;
-
-    $max = 0;
-
-    foreach($graph['ticks'] as $gValue)
-        if($gValue['value'] > $max) $max = $gValue['value'];
-
-    $max = ceil($max / 5) * 5;
-
-    return $view->widget->chart('chart' . ucfirst($name))
-        ->attr('class', 'chart')
-        ->showBorderLine(FALSE)
-        ->padding(5, 25, 5, 5)
-        ->backgroundColor('transparent')
-        ->title($graph['dataSource']['desc'])
-        ->description($graph['archive']['desc'])
-        ->colorScheme('scheme07')
-        ->renderEngine('SVG')
-        ->seriesGroups(array(array(
-            'type'      => 'area',
-            'valueAxis' => array(
-                'description'    => $graph['unit'],
-                'minValue'       => 0,
-                'maxValue'       => $max,
-                'gridLinesColor' => '#eeeeee',
-                'tickMarksColor' => '#eeeeee'
-            ),
-            'series'    => array(array(
-                'dataField'   => 'value',
-                'displayText' => 'MAX ' . ucfirst($name)
-            ))
-        )))->categoryAxis(array(
-            'dataField'      => 'tick',
-            'unitInterval'   => 5,
-            'gridLinesColor' => '#eeeeee'
-        ))->source($graph['ticks']);
-
-}
-?>
-
-<div class="row">
-    <div class="col col-1">
-        <div class="panel">
-            <div class="panel-header">Exec Time</div>
-            <div class="panel-content">
-                <canvas id="testCanvas" style="height: 300px;"></canvas>
-            </div>
-        </div>
-    </div>
-</div>
-
 <div class="row">
     <div class="col col-6">
         <div class="panel primary">
@@ -62,7 +6,7 @@ function show_graph($view, $name){
                 Parturient massa ac torquent nibh ac a tincidunt rutrum himenaeos ullamcorper quis vestibulum torquent a consectetur elit eu ut iaculis vehicula augue class pulvinar porta at quis. Metus ornare per proin cras scelerisque lacus scelerisque ac himenaeos posuere libero scelerisque non habitant amet. Elementum magna orci nostra ultrices dui gravida a eros a fringilla ad tempor orci ultrices consectetur nec tempus dui et litora dis ut consectetur dapibus leo.
             </div>
             <div class="panel-footer">
-                <button class="primary">Do Teh Thing</button>
+                <button class="btn btn-primary">Do Teh Thing</button>
             </div>
         </div>
     </div>
