--- a/libs/console/application/config.phtml
+++ b/libs/console/application/config.phtml
@@ -14,7 +14,7 @@
                     <textarea name="config" style="width: 100%; height: 100%;"><?=$this->config;?></textarea>
                 </div>
                 <div class="panel-footer">
-                    <button class="primary">Save</button>
+                    <button class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
