Added memory metrics to application

--- a/libs/console/application/metrics.phtml
+++ b/libs/console/application/metrics.phtml
@@ -1,41 +1,1 @@
-<div class="row">
-    <div class="col col-6">
-        <div class="panel" id="metrics0">
-            <div class="panel-header"></div>
-            <div class="panel-subheader"></div>
-            <div class="panel-content">
-                <canvas class="metrics"></canvas>
-            </div>
-        </div>
-    </div>
-    <div class="col col-6">
-        <div class="panel" id="metrics1">
-            <div class="panel-header"></div>
-            <div class="panel-subheader"></div>
-            <div class="panel-content">
-                <canvas class="metrics"></canvas>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col col-6">
-        <div class="panel" id="metrics2">
-            <div class="panel-header"></div>
-            <div class="panel-subheader"></div>
-            <div class="panel-content">
-                <canvas class="metrics"></canvas>
-            </div>
-        </div>
-    </div>
-    <div class="col col-6">
-        <div class="panel" id="metrics3">
-            <div class="panel-header"></div>
-            <div class="panel-subheader"></div>
-            <div class="panel-content">
-                <canvas class="metrics"></canvas>
-            </div>
-        </div>
-    </div>
-</div>
+<div id="metrics"></div>
