--- a/libs/console/index.phtml
+++ b/libs/console/index.phtml
@@ -1,88 +1,230 @@
+<?php
+$memory_limit = bytes_str(ini_get('memory_limit'));
+$memory_peak = bytes_str(memory_get_peak_usage());
+?>
 <div class="row">
-    <div class="col col-6">
-        <div class="panel primary">
-            <div class="panel-header">Maintenance</div>
+    <div class="col col-1">
+        <div class="panel">
+            <div class="panel-header">Application Information</div>
             <div class="panel-content">
-                Parturient massa ac torquent nibh ac a tincidunt rutrum himenaeos ullamcorper quis vestibulum torquent a consectetur elit eu ut iaculis vehicula augue class pulvinar porta at quis. Metus ornare per proin cras scelerisque lacus scelerisque ac himenaeos posuere libero scelerisque non habitant amet. Elementum magna orci nostra ultrices dui gravida a eros a fringilla ad tempor orci ultrices consectetur nec tempus dui et litora dis ut consectetur dapibus leo.
-            </div>
-            <div class="panel-footer">
-                <button class="btn btn-primary">Do Teh Thing</button>
+                <table class="table-vert text-mono">
+                    <tr>
+                        <th style="width: 150px;">Name:</th>
+                        <td>
+                            <?=$this->config->app['name'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Version:</th>
+                        <td>
+                            <?=$this->config->app['version'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Environment:</th>
+                        <td>
+                            <?=APPLICATION_ENV;?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Locale:</th>
+                        <td>
+                            <?=$this->config->app['locale'];?>
+                        </td>
+                        <th>Debugging:</th>
+                        <td>
+                            <?=$this->config->app['debug'] ? '&check;' : '&cross;';?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Timezone:</th>
+                        <td>
+                            <?=$this->config->app['timezone'];?>
+                        </td>
+                        <th>Compression:</th>
+                        <td>
+                            <?=$this->config->app['compress'] ? '&check;' : '&cross;';?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Default Controller:</th>
+                        <td>
+                            <?=$this->config->app['defaultController'];?>
+                        </td>
+                        <th>Response Image Cache:</th>
+                        <td>
+                            <?=$this->config->app['responseImageCache'] ? '&check;' : '&cross;';?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Error Controller:</th>
+                        <td>
+                            <?=$this->config->app['errorController'];?>
+                        </td>
+                        <th>Metrics:</th>
+                        <td>
+                            <?=$this->config->app['metrics'] ? '&check;' : '&cross;';?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Root URL:</th>
+                        <td colspan="3">
+                            <?=$this->html->a($this->application->url())->target('_blank');?>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
-    <div class="col col-6">
-        <div class="panel info">
-            <div class="panel-header">Statistics</div>
+    <div class="col col-1">
+        <div class="panel">
+            <div class="panel-header">System Information</div>
             <div class="panel-content">
-                Parturient massa ac torquent nibh ac a tincidunt rutrum himenaeos ullamcorper quis vestibulum torquent a consectetur elit eu ut iaculis vehicula augue class pulvinar porta at quis. Metus ornare per proin cras scelerisque lacus scelerisque ac himenaeos posuere libero scelerisque non habitant amet. Elementum magna orci nostra ultrices dui gravida a eros a fringilla ad tempor orci ultrices consectetur nec tempus dui et litora dis ut consectetur dapibus leo.
-            </div>
-            <div class="panel-footer row">
-                <div class="col col-4">
-                    <div class="stat">
-                        <div class="number">107</div>
-                        <div class="label">Today</div>
-                    </div>
-                </div>
-                <div class="col col-4">
-                    <div class="stat">
-                        <div class="number">822</div>
-                        <div class="label">Week</div>
-                    </div>
-                </div>
-                <div class="col col-4">
-                    <div class="stat">
-                        <div class="number">72</div>
-                        <div class="label">Month</div>
-                    </div>
-                </div>
+                <table class="table-vert text-mono">
+                    <tr>
+                        <th style="width: 150px;">PHP Version:</th>
+                        <td>
+                            <?=PHP_VERSION;?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Memory Usage:</th>
+                        <td class="pct">
+                            <div class="pct-content">
+                                <?=str_bytes($memory_peak) . '/' . str_bytes($memory_limit);?>
+                                <div class="pct-bar" style="width: <?=$memory_peak / $memory_limit * 100;?>%"></div>
+                            </div>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <th>Computer Name:</th>
+                        <td>
+                            <?=ake($_SERVER, 'COMPUTERNAME', ake($_SERVER, 'SERVER_NAME', 'Unknown'));?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Operating System:</th>
+                        <td>
+                            <?=php_uname('s') . ' ' . php_uname('v');?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Architecture:</th>
+                        <td>
+                            <?=php_uname('m');?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Server Software:</th>
+                        <td>
+                            <?=$_SERVER['SERVER_SOFTWARE'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Server Host:</th>
+                        <td>
+                            <?=$_SERVER['SERVER_NAME'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Server Port:</th>
+                        <td>
+                            <?=$_SERVER['SERVER_PORT'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Document Root:</th>
+                        <td>
+                            <?=$_SERVER['DOCUMENT_ROOT'];?>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Gateway Interface:</th>
+                        <td>
+                            <?=$_SERVER['GATEWAY_INTERFACE'];?>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col col-12">
-        <div class="panel">
-            <h3>Example List</h3>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Location</th>
-                        <th>Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Index</td>
-                        <td>/index</td>
-                        <td>
-                            <?=$this->datetime(time());?>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>About</td>
-                        <td>/about</td>
-                        <td>
-                            <?=$this->datetime(time());?>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Settings</td>
-                        <td>/settings</td>
-                        <td>
-                            <?=$this->datetime(time());?>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Authentication</td>
-                        <td>/auth</td>
-                        <td>
-                            <?=$this->datetime(time());?>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="col col-1">
+        <div class="panel primary">
+            <div class="panel-header">Composer Libraries</div>
+            <div class="panel-content">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Version</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <?php foreach($this->libraries as $lib): ?>
+                        <tr>
+                            <td>
+                                <div class="text-small">
+                                    <?=$this->html->a($lib['homepage'], $lib['name'])->target('_blank');?>
+                                </div>
+                                <div class="text-xsmall">
+                                    <?=$lib['description'];?>
+                                </div>
+                            </td>
+                            <td>
+                                <?=$lib['version'];?>
+                            </td>
+                        </tr>
+                        <?php endforeach; ?>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div><?php if($this->stats):?>
+    <div class="col col-1">
+        <div class="panel success">
+            <div class="panel-header">Statistics</div>
+            <div class="panel-content row">
+                <div class="col col-1">
+                    <div class="stat">
+                        <div class="stat-number">
+                            <?=$this->stats['hour'];?>
+                        </div>
+                        <div class="stat-label">Hour</div>
+                    </div>
+                </div>
+                <div class="col col-1">
+                    <div class="stat">
+                        <div class="stat-number">
+                            <?=$this->stats['day'];?>
+                        </div>
+                        <div class="stat-label">Day</div>
+                    </div>
+                </div>
+                <div class="col col-1">
+                    <div class="stat">
+                        <div class="stat-number">
+                            <?=$this->stats['week'];?>
+                        </div>
+                        <div class="stat-label">Week</div>
+                    </div>
+                </div>
+                <div class="col col-1">
+                    <div class="stat">
+                        <div class="stat-number">
+                            <?=$this->stats['month'];?>
+                        </div>
+                        <div class="stat-label">Month</div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer pull-right">
+                <a href="<?=$this->url('app/metrics');?>" class="btn btn-default">View Metrics</a>
+            </div>
         </div>
     </div>
+    <?php endif; ?>
 </div>
