--- a/libs/console/layout.phtml
+++ b/libs/console/layout.phtml
@@ -11,10 +11,6 @@
 </head>
 <body>
 
-    <?php
-    $module_info = array('label' => 'Module', 'icon' => 'bars');
-    ?>
-
     <div class="hazaar-layout">
         <div class="sidebar">
 
@@ -30,69 +26,22 @@
 
             <div class="sidebar-user-info">
                 <?=$this->html->i()->class('fa fa-user-circle fa-4x sidebar-user-img');?>
-                <div class="sidebar-user-name"><?=$this->user['fullname'];?></div>
-                <div class="sidebar-user-role"><?=$this->user['group'];?></div>
+                <div class="sidebar-user-name">
+                    <?=$this->user['fullname'];?>
+                </div>
+                <div class="sidebar-user-role">
+                    <?=$this->user['group'];?>
+                </div>
             </div>
 
             <div class="sidebar-nav">
-                <?php
-                $nav = $this->html->ul()->class('sidebar-nav-module');
-
-                foreach($this->navitems as $group_name => $section){
-
-                    $module_nav = $this->html->li()->class('sidebar-nav-item');
-
-                    $icon = ake($section, 'icon', 'cube');
-
-                    $target = ake($section, 'target');
-
-                    $module_nav->add($this->html->a($this->url($target), array(
-                        $this->fontawesome->icon($icon),
-                        ake($section, 'label'),
-                    )))->toggleClass('selected', $this->active($target));
-
-                    if($this->active($target))
-                        $module_info = array('label' => ake($section, 'label'), 'icon' => $icon);
-
-                    if($items = ake($section, 'items')){
-
-                        $nav_items = $this->html->ul()->class('sidebar-nav-items');
-
-                        foreach($items as $item){
-
-                            $target = ake($item, 'target');
-
-                            $link = $this->html->a($this->url($target), array(
-                                $this->html->i()->class('fa fa-' . ake($item, 'icon', 'none')),
-                                ake($item, 'label')
-                            ));
-
-                            if($suffix = ake($item, 'suffix'))
-                                $link->add($this->html->div(ake($suffix, 0))->class('suffix ' . ake($suffix, 1, 'default')));
-
-                            $nav_items->add($this->html->li($link)
-                                ->toggleClass('active', $this->active($target)));
-
-                        }
-
-                        $module_nav->add($nav_items);
-
-                    }
-
-                    $nav->add($module_nav);
-
-                }
-
-                echo $nav;
-
-                ?>
+                <?=$this->partial('menu', array('items' => $this->navitems));?>
             </div>
         </div>
         <div class="main-panel">
             <div class="main-topbar">
                 <div class="main-label">
-                    <i class="fa fa-<?=$module_info['icon'];?>"></i>
-                    <?=$module_info['label'];?>
+                    <?=$this->getActiveMenu();?>
                 </div>
                 <ul class="navbar navbar-right navbar-buttons">
                     <li>
